# nodejs-mobile

./: .gitignore  README.md
android/: build.gradle  settings.gradle
android/lib/: build.gradle
android/lib/src/main/assets/nodejs-project/: package.json
android/lib/src/main/cpp/: CMakeLists.txt  node_bridge.cpp
android/lib/src/main/kotlin/com/nodejs/mobile/: NodeEventEmitter.kt  NodejsRuntime.kt
android/sample/: build.gradle
android/sample/src/main/: AndroidManifest.xml
android/sample/src/main/assets/nodejs-project/: main.js
android/sample/src/main/kotlin/com/nodejs/mobile/sample/: MainActivity.kt
android/sample/src/main/res/layout/: activity_main.xml
npm-bridge/: index.js  package.json
patches/android/: node-mobile-shared.patch  openssl-no-asm.patch  v8-trap-handler-android.patch
scripts/: android-build.sh  apply-patches.sh  copy-outputs.sh  setup.sh
